--- a/RSA_Cryptosystem/RSA_Cryptosystem/RSA_Cryptosystem.vcxproj
+++ b/RSA_Cryptosystem/RSA_Cryptosystem/RSA_Cryptosystem.vcxproj
@@ -124,6 +124,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="rsa.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="RSA.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
